# introduction-to-python

./: .gitattributes  .gitignore  LICENSE  README.md  Tutorial.ipynb  fashion-MNIST_ClassificationUsingLogisticRegression-Copy1.ipynb  fashion_mnist.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  fashion-MNIST_ClassificationUsingLogisticRegression-Copy1-checkpoint.ipynb  fashion-MNIST_ClassificationUsingLogisticRegression-checkpoint.ipynb  fashion_mnist-checkpoint.ipynb
src/my_project/tensorflow_cpu-2.20.0.dist-info/: RECORD
